app/assets/stylesheets/defaults.css.scss
/*----------------------------------------------------------------------------- 
Moonrise Kingdom Site Defaults Stylesheet 
version:   1.0 
date:      06/06/13 
author:    Kenny Duong 
email:     keduong@gmail.com 
-----------------------------------------------------------------------------*/

/* Remove padding and margin from everything */ 
* { 
  margin: 0; 
  border: 0; 
  padding: 0; 
}

/* Size html and body containers to full height */
html,body { width:100%; height:100%;  }

/* Classes for floating things */
.clear { clear:both; } 
.right { float: right; } 
.left  { float: left; }
.upper { text-transform: uppercase; font-weight:1000;}
.lefta { position:absolute; left:0;}

.default_width { width:1000px; margin-left:auto; margin-right:auto; }
.full_width {width:100%;}
.hcol_lt { width:425px; padding: 10px 25px 10px 50px; float:left; }
.hcol_rt { width:425px; padding: 10px 50px 10px 25px; float:right; }

/* Fonts */
.ff_title           { font-family: 'Thirsty'; }
.ff_nav             { font-family: 'Pathway Gothic One'}
.ff_read,p,td,th    { font-family: 'MyriadPro'}
.ff_cursive         { font-family: 'Cedarville Cursive'}
/* Font colors */
.fc_1, a:link.fc_1, a:visited.fc_1 {color: #7D6E8B;}
.fc_2, a:link.fc_2, a:visited.fc_2 {color: #99B3B7;}
.fc_3, a:link.fc_3, a:visited.fc_3 {color: white;}

/* Font sizes */
h1 { font-size: 60px; text-shadow: 2px 2px white; }
h2 { font-size: 40px; text-shadow: 2px 2px white; } 
h3 { font-size: 30px; text-shadow: 2px 2px white; }
h4 { font-size: 20px; }
td { font-size: 20px; }
th { font-size: 20px; }
li { font-size: 20px; }
p  { font-size: 16px; text-align:justify;}

/* Links, List, and Buttons*/
a  { text-decoration:none; }
a:link    {color: #800080; }
a:visited {color: #800080; }
li { list-style-type:none; }

a.button, input[type='submit'] { 
  margin: 5px;
  border: 2px solid white; padding: 3px 10px; font: 20px 'Pathway Gothic One' ; 
  color: white; background: #7D6E8B;
}
a.button:hover, input[type='submit']:hover { 
  color: #7D6E8B; border-color: #7D6E8B; background: white;
}


/* Tables */
table {
  color:white;
  border-top: 1px solid white;
  border-bottom: 1px solid white;
  border-spacing: 0;
  border-collapse: collapse;
  margin: 10px auto;
}

th,td { 
  padding:5px; background: #7D6E8B; 
  font: 20px 'Pathway Gothic One';
  text-align:center;
  border-left: 1px solid white; border-right: 1px solid white;
}

td { font: 15px 'Crafty Girls'; text-align:left; background: #99b3b7;}

/* Body */

body {
  background-color: white; 
  color: black;     
  text-align:center;

  h2 { margin-top:20px;}

  #bg { 
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index:-1;   
  }  

  .wrapper { min-height: 100%; height: auto !important; height: 100%; margin-bottom: -60px; }
  .header { padding:10px; }
  .nav {
    background: white; background: rgba(255, 255, 255, 0.7);  
    padding: 5px 0px;
    li { display:inline;}
    a { margin: 0; padding:5px 20px;}
    a:link, a:visited {color: #7D6E8B}
    a:hover { color:white; background:#99b3b7;}
  }

  .content {  
    background: white; background: rgba(255, 255, 255, 0.4);
    padding-bottom: 50px;
    overflow:auto;
    .img_top{
      width: 1000px;
      overflow:hidden;
    }
    .img_sq{
      width:  415px;
      border: 5px solid white;
      overflow:hidden;
    }

    .spacer { height:50px; }
  }

  .footer_push { height:60px; }

  .footer { height:60px; position:relative;
    span {position:absolute; bottom:0px; width: 500px; left:50%; margin-left:-250px;};
  }

  .form {
    width: 450px;
    margin: 0 auto;
    padding: 20px;
    background: #DDDDDD;
    border: 5px solid #7D6E8B;

    .field {
      margin-top: 5px; margin-bottom: 5px;
      position:relative;
      text-align: left;
      .lineup { position:absolute; left: 90px; }
    }

    .written {
      font: 24px 'Crafty Girls'; color: black;
    }

    .note {
      
    }

    label,input[type='text']{
       font: 15px 'Crafty Girls'; color: black;
       display: inline-block;
       padding: 2px; 
       margin: 2px 0; 
    }
    input[type='text'] { 
      width: 270px;  
    }
  }

  .admin {

    td { font: 15px 'MyriadPro'; }

  }

  .admin_form {
    width: 450px;
    margin: 0 auto;
    padding: 20px;
    background: #DDDDDD;
    border: 5px solid #7D6E8B;
    font: 15px 'MyriadPro'; color: black;

    .field {
      margin-top: 5px; margin-bottom: 5px;
      position:relative;
      text-align: left;
      .lineup { position:absolute; left: 90px; }
    }

    label,textarea,input[type='text'],input[type='password'],select {
       font: 15px 'MyriadPro'; color: black;
       display: inline-block;
       padding: 2px; 
       margin: 2px 0; 
    }

    td { font: 15px 'MyriadPro'; }

    input[type='text'],input[type='password'], textarea, table { 
      width: 270px;  
    }
  }

  #alert { color:red; position:absolute; top:0px; left:50%; width:50%; margin-left:-25% }
  #notice { color:green; position:absolute; top:0px; left:50%; width:50%; margin-left:-25% }
  #error_explanation {text-align:left; color:red; p {color:red;} ul {list-style-type:none; text-indent:10px;}}
}

